--- a/.github/workflows/post-release-version-bump.yml
+++ b/.github/workflows/post-release-version-bump.yml
@@ -58,25 +58,25 @@ jobs:
     runs-on: ubuntu-latest
     needs: check-version
     steps:
-      - name: Configure AWS credentials for BOT secrets
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRETS_MANAGER }}
-          aws-region: ${{ env.AWS_DEFAULT_REGION }}
-
-      - name: Get Bot secrets
-        uses: aws-actions/aws-secretsmanager-get-secrets@v1
-        id: bot_secrets
-        with:
-          secret-ids: |
-            BOT_TOKEN ,${{ secrets.BOT_TOKEN_SECRET_ARN }}
-          parse-json-secrets: true
+#      - name: Configure AWS credentials for BOT secrets
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRETS_MANAGER }}
+#          aws-region: ${{ env.AWS_DEFAULT_REGION }}
+#
+#      - name: Get Bot secrets
+#        uses: aws-actions/aws-secretsmanager-get-secrets@v1
+#        id: bot_secrets
+#        with:
+#          secret-ids: |
+#            BOT_TOKEN ,${{ secrets.BOT_TOKEN_SECRET_ARN }}
+#          parse-json-secrets: true
 
       - name: Setup Git
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          token: ${{ env.BOT_TOKEN_GITHUB_RW_PATOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure Git
         run: |
@@ -107,7 +107,7 @@ jobs:
 
       - name: Create Pull Request to main
         env:
-          GITHUB_TOKEN: ${{ env.BOT_TOKEN_GITHUB_RW_PATOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           DEV_VERSION="${{ github.event.inputs.version }}.dev0"
           gh pr create --title "Post release $VERSION: Update version to $DEV_VERSION" \
